2020-11-26  Timm Bäder  <tbaeder@redhat.com>

	* dwfl_segment_report_module.c (struct read_state): New.
	(finish_portion): New static function.
	(dwfl_segment_report_module): Introduce read_state. Remove
	finish_portion function. Call static function with read_state.

2020-11-23  Timm Bäder  <tbaeder@redhat.com>

	* segment_report_module.c (dwfl_segment_report_module): Remove
	consider_phdr, do checks inline.

2020-11-23  Timm Bäder  <tbaeder@redhat.com>

	* segment_report_module.c (dwfl_segment_report_module): Remove
	consider_dyn, do checks inline.

2020-11-23  Timm Bäder  <tbaeder@redhat.com>

	* segment_report_module.c (dwfl_segment_report_module): Do one
	loop check for d32/d64 arrays.

2020-11-23  Timm Bäder  <tbaeder@redhat.com>

	* segment_report_module.c (dwfl_segment_report_module): Remove
	read_phdr, do check and call memory_callback directly.

2020-11-23  Timm Bäder  <tbaeder@redhat.com>

	* segment_report_module.c (dwfl_segment_report_module): Do one
	loop check for p32/p64 arrays.

2020-11-23  Timm Bäder  <tbaeder@redhat.com>

	* segment_report_module.c (dwfl_segment_report_module): Remove
	final_read, call memory_callback directly.

2020-11-23  Timm Bäder  <tbaeder@redhat.com>

	* segment_report_module.c (struct elf_build_id): New.
	(dwfl_segment_report_module): Pass build_id as struct.

2020-11-23  Timm Bäder  <tbaeder@redhat.com>

	* segment_report_module.c (dwfl_segment_report_module): Remove
	release_buffer, call memory_callback directly.

2020-11-23  Timm Bäder  <tbaeder@redhat.com>

	* segment_report_module.c (dwfl_segment_report_module): Remove
	segment_read, call memory_callback directly.

2020-11-19  Andreas Krebbel  <krebbel@linux.ibm.com>

	* linux-pid-attach.c (pid_memory_read): Shift the upper 4 bytes
	down on big endian 64 bit targets.

2020-11-12  Timm Bäder <tbaeder@redhat.com>

	* dwfl_segment_report_module.c (dwfl_segment_report_module): Remove
	finish function, replace with goto out.

2020-11-12  Timm Bäder <tbaeder@redhat.com>
